chore(docs): minor formatting updates

--- a/docs/repetitorium/part three/Aktivitätsdiagramme/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Aktivitätsdiagramme/einsatzbereich.tex
@@ -2,7 +2,7 @@
 
 Das \textbf{Aktivitätsdiagramm} gehört zu den \textbf{Verhaltensdiagrammen} und stellt dar, wie \textit{Verhalten} realisiert wird.\\
 
-\noindent
+\begin{tcolorbox}
 Aktivitätsdiagramme können in \textit{allen} Phasen des Softwareentwicklungsprozesses eingesetzt werden:
 
 \begin{itemize}
@@ -12,6 +12,7 @@ Aktivitätsdiagramme können in \textit{allen} Phasen des Softwareentwicklungspr
     \item \textbf{Implementierung}: Darstellung komplexer Algorithmen
     \item \textbf{Testphase}: Ableitung von Testfällen
 \end{itemize}
+\end{tcolorbox}
 
 \noindent
 \textit{Buhl} hebt als Vorteil die sehr übersichtliche Darstellung paralleler Abläufe hervor (\cite[57]{Buh09}).
