--- a/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/einsatzbereich von paketdiagrammen.tex
+++ b/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/einsatzbereich von paketdiagrammen.tex
@@ -1,9 +1,10 @@
 \section{Einsatzbereich von Paketdiagrammen}
 
-\textbf{Paketdiagramme} zeigen Pakete und ihre Abhängigkeiten und werden in frühen Designphasen genutzt, um Strukturen (großer Systeme) aufzuzeigen.\\
-Durch die Gruppierung können Details weggelassen werden.\\
+\begin{tcolorbox}
+\textbf{Paketdiagramme} zeigen Pakete und ihre Abhängigkeiten und werden in frühen Designphasen genutzt, um Strukturen (großer Systeme) aufzuzeigen.
+\end{tcolorbox}
 
-\noindent
+Durch die Gruppierung können Details weggelassen werden.\\
 Eine Abhängigkeit zwischen zwei Paketen gibt die Abhängigkeit darin enthaltener Elemente wieder.\\
 
 \noindent
