--- a/docs/repetitorium/part three/Sequenzdiagramme/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Sequenzdiagramme/einsatzbereich.tex
@@ -1,7 +1,9 @@
 \section{Einsatzbereich}
 
 \begin{tcolorbox}
-    \textbf{Sequenzdiagramme} stellen Verhalten auf der Ebene einer Interaktion dar.
+    \textbf{Sequenzdiagramme} stellen Verhalten auf der Ebene einer Interaktion dar.\\
+    In der Phase des Klassendesigns werden die Teilnehmer der Interaktionen bestimmt, weshalb Sequenzdiagramme oft in dieser Phase genutzt werden.\\
+    In der \textbf{Analysephase} können Sequenzdiagramme eingesetzt werden, um die Kommunikation der bis dahin ausgemachten \textbf{Geschäftsobjekte} zu modellieren, oder um \textbf{Anwendungsfälle} weiter zu spezifizieren.
 \end{tcolorbox}
 
 \noindent
@@ -24,12 +26,9 @@ Interaktionsrahmen können Attribute verhalten, die während der Interaktion ges
 
 \noindent
 Also Voraussetzung für das Beschreiben von Verhalten ist der Entwurf der beteiligten Kommunikationspartner gegeben, was i.d.R. durch das \textbf{Klassendiagramm} geschieht.\\
-In demm Fall sind die Kommunikationspartner dann \textit{Objekte}.\\
+In dem Fall sind die Kommunikationspartner dann \textit{Objekte}.\\
 
 \noindent
 Interaktionen könenn aber auch auf Ebene von Systemkomponenten definiert werden, um Systemverhalten zu modellieren\footnote{
 Kommunikationspartner kann dann bspw. ``Datenbankmanagementsystem`` sein.
-}.\\
-
-\noindent
-In der \textbf{Analysephase} können Sequenzdiagramme eingesetzt werden, um die Kommunikation der bis dahin ausgemachten \textbf{Geschäftsobjekte} zu modellieren, oder um \textbf{Anwendungsfälle} weiter zu spezifizieren.
+}.
