docs: update remarks for navigability and associations

--- a/docs/tests/einsendeaufgaben 3/Einsendeaufgaben3.tex
+++ b/docs/tests/einsendeaufgaben 3/Einsendeaufgaben3.tex
@@ -194,6 +194,7 @@
 %--------------------------------------------------------------------------
 % Die Kapitel werden in separaten .tex-Dateien abgelegt und hier eingebunden.
 	\input{chapters/aufgabe 1/index}
+	\input{chapters/aufgabe 2/index}
 
 %\input{chapters/ZusammenfassungAusblick}
 % ...
