--- a/docs/tests/einsendeaufgaben 3/Einsendeaufgaben3.tex
+++ b/docs/tests/einsendeaufgaben 3/Einsendeaufgaben3.tex
@@ -195,6 +195,8 @@
 % Die Kapitel werden in separaten .tex-Dateien abgelegt und hier eingebunden.
 	\input{chapters/aufgabe 1/index}
 	\input{chapters/aufgabe 2/index}
+	\input{chapters/aufgabe 3/index}
+
 
 %\input{chapters/ZusammenfassungAusblick}
 % ...
