docs: add lösungsvorschlag for aufgabe 4

--- a/docs/tests/einsendeaufgaben 3/Einsendeaufgaben3.tex
+++ b/docs/tests/einsendeaufgaben 3/Einsendeaufgaben3.tex
@@ -196,7 +196,7 @@
 	\input{chapters/aufgabe 1/index}
 	\input{chapters/aufgabe 2/index}
 	\input{chapters/aufgabe 3/index}
-
+	\input{chapters/aufgabe 4/index}
 
 %\input{chapters/ZusammenfassungAusblick}
 % ...
