docs: add lösungsvorschlag for aufgabe 5

--- a/docs/tests/einsendeaufgaben 3/Einsendeaufgaben3.tex
+++ b/docs/tests/einsendeaufgaben 3/Einsendeaufgaben3.tex
@@ -168,7 +168,7 @@
 
 	\end{center}}							% Autor der Arbeit
 	\address{\begin{center}
-				 \small{15.05.2024\\  Thorsten Suckow-Homberg, \url{https://thorsten.suckow-homberg.de}}
+				 \small{18.05.2024\\  Thorsten Suckow-Homberg, \url{https://thorsten.suckow-homberg.de}}
 	\end{center}} 							% Im Zusammenhang mit dem Datum wird hinter dem Ort ein Komma angegeben
 	\submitdate{} 				% Abgabedatum
 %\begingroup
@@ -197,6 +197,7 @@
 	\input{chapters/aufgabe 2/index}
 	\input{chapters/aufgabe 3/index}
 	\input{chapters/aufgabe 4/index}
+	\input{chapters/aufgabe 5/index}
 
 %\input{chapters/ZusammenfassungAusblick}
 % ...
