chore: initial commit for teil 4

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -39,6 +39,14 @@
     publisher = {Trier University of Applied Sciences},
 }
 
+
+@book{Wed09c,
+    author = {Wedemann, Gero},
+    title = {Qualitätssicherung},
+    year = {2009},
+    publisher = {Trier University of Applied Sciences},
+}
+
 @book{Mar03,
     author = {Martin, Robert Cecil},
     title = {Agile Software Development: Principles, Patterns, and Practices},
@@ -452,3 +460,4 @@ and Rundshagen, Michael",
     year={1994},
     publisher={Pearson Education}
 }
+
