--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -183,7 +183,7 @@
 
 	\end{center}}							% Autor der Arbeit
 	\address{\begin{center}
-				 \small{10.05.2024\\  Thorsten Suckow-Homberg, \url{https://thorsten.suckow-homberg.de}}
+				 \small{20.05.2024\\  Thorsten Suckow-Homberg, \url{https://thorsten.suckow-homberg.de}}
 	\end{center}} 							% Im Zusammenhang mit dem Datum wird hinter dem Ort ein Komma angegeben
 	\submitdate{} 				% Abgabedatum
 %\begingroup
@@ -227,6 +227,8 @@
 	\input{part three/Anwendungsfalldiagramm/index}
 	\input{part three/Aktivitätsdiagramme/index}
 	\input{part three/Zustandsautomaten/index}
+
+	\input{part four/teil4}
 
 	\glsaddall
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
