docs: update index

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -229,6 +229,7 @@
 	\input{part three/Zustandsautomaten/index}
 
 	\input{part four/teil4}
+	\input{part four/Qualität/index}
 
 	\glsaddall
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
