docs: add remarks for Qualitätsforderung

--- a/docs/repetitorium/part four/Qualität/qualität.tex
+++ b/docs/repetitorium/part four/Qualität/qualität.tex
@@ -1,27 +1,32 @@
-\section{Qualität}
+\section{Qualität}\label{sec:qualitat}
 Die \textbf{Qualität} einer Software lässt sich oft nur schwer beschreiben.\\
 Trotzdem ist es wichtig, sie genau zu definieren: Der Kunde möchte ein bestimmtes Maß an Mindestqualität vertraglich vereinbaren.
-Als Entwickler muss man verstehen, was der Kunde unter Qualität versteht, um eine zufriedenstellende Arbeit zabzuliefern.\\
+Als Entwickler muss man verstehen, was der Kunde unter Qualität versteht, um eine zufriedenstellende Arbeit abzuliefern.\\
 Im Einsatz auf dem anonymen Markt stellt sich die Frage, wann die Qualität einer Software hoch genug ist, damit sie ausgeliefert werden kann.
 
 \subsection*{Qualität ist entscheidend}
 Die Qualität einer Software ist sicher entscheidend für ihren Erfolg: Wenn eine Software richtig funktioniert, ist sie zur Lösung bestimmter Probleme bzw. im Einsatz zur Erledigung bestimmter Aufgaben geeignet.\\
 Hierzu muss sichergestellt sein, dass an entscheidenden (\textit{geschäftskritischen}) Stellen keine Probleme auftreten.\\
-Außerdem muss die Software den Qualitäts(an)forderungen (s. Abschnitt~\ref{sec:nicht-funktionale-anforderungen}) genügen.
+Außerdem muss die Software den Qualitätsforderungen (s. Abschnitt~\ref{sec:nicht-funktionale-anforderungen}) genügen.
+
+\vspace{2mm}
+\begin{tcolorbox}[title=Qualitätsforderung/Qualitätsanforderung]
+    \textbf{Qualitätsforderungen} (auch: \textit{Qualitätsmerkmale}) helfen dabei, Qualitätsanforderungen zu konkretisieren (vgl.~\cite[58]{Wed09}).
+\end{tcolorbox}
 
 \subsection*{Qualitätssicherung}
 Die Aufgabe der \textbf{Qualitätssicherung} liegt u.a. darin, sicherzustellen, dass die \textbf{Qualitätsforderungen} eingehalten werden.
 
 \vspace{2mm}
 \begin{tcolorbox}
-    Für jede \textbf{Qualitätsanforderung} muss mindestens eine \textbf{Maßnahme}\footnote{man spricht in diesem Zusammenhang von \textit{Qualitätsmaßnahmen}} vorhanden sein, die die Erfüllung dieser Qualitätsanforderung gewährleistet (vgl.~\cite[1]{Wed09c})
+    Für jede \textbf{Qualitätsforderung} muss mindestens eine \textbf{Maßnahme}\footnote{man spricht in diesem Zusammenhang von \textit{Qualitätsmaßnahmen}} vorhanden sein, die die Erfüllung dieser Qualitätsforderung gewährleistet (vgl.~\cite[1]{Wed09c})
 \end{tcolorbox}
 \vspace{2mm}
 
 \noindent
 Da eine möglichst kostengünstige Produktion von Software ein wesentliches Ziel des Software Engineering ist\footnote{
 s. Teil 1, bspw. Abschnitt~\ref{sec:einfuhrung}
-} und jede Maßnahme Geld kostet, muss sichergestellt werden, dass nur die \textit{absolut notwendigen} Qualitätsanforderungen berücksichtigt werden und effiziente und effektive Qualitätsmaßnahmen ergriffen werden.
+} und jede Maßnahme Geld kostet, muss sichergestellt werden, dass nur die \textit{absolut notwendigen} Qualitätsforderungen berücksichtigt werden und effiziente und effektive Qualitätsmaßnahmen ergriffen werden.
 
 \subsection*{Qualitätssystem}
 Aufgrund der unterschiedlichen Vorstellungen von \textbf{Qualitätsforderungen} werden diese genau definiert.\\
