--- a/docs/repetitorium/part one/Requirements Engineering/nichtfunktionaleanforderungen.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/nichtfunktionaleanforderungen.tex
@@ -11,14 +11,16 @@
 \noindent
 Auch nicht-funktionale Anforderungen verursachen Aufwand, da sie in allen Phasen mitberücksichtigt werden müssen.\\
 Es ist deshalb nötig, alle nicht-funktionalen Anforderungen zu priorisieren, und sich gemeinsam mit Kunde und Anwendern auf die notwendigsten zu einigen.\\
-Gute Praxis ist es, die Qualitätsmerkmale genau zu definieren.
+Gute Praxis ist es, die Qualitätsmerkmale (auch: \textit{Qualitätsforderungen}\footnote{
+    s. Abschnitt \ref{sec:qualitat}: Qualitätsforderungen dienen dazu, Qualitätsanforderungen zu konkretisieren
+}) genau zu definieren.
 
 \subsection*{Nicht-funktionale Anforderungen sind entscheidend}
 Nicht-funktionale Anforderungen sind insb. entscheidend für die Systemarchitektur.\\
 Es muss zumindest \textit{eine} Systemarchitektur vorhanden sein, die die fundamentalen Anforderungen (Erreichbarkeit, Antwortzeiten, Funktionalität) abdeckt.
 
 \subsection*{Systematik der Qualitätsanforderungen}
-Vorgefertigte Kategorien und Typen von Qualitätsmerkmalen können bei der Erfassung von Qualitätsanforderungen helden, die Übersicht zu bewahren und keine wichtige Anforderung zu übersehen\footnote{man nennt dies \textit{systematische Aufstellungen} bzw. \textit{Qualitätssysteme}}.\\
+Vorgefertigte Kategorien und Typen von Qualitätsmerkmalen können bei der Erfassung von Qualitätsanforderungen helfen, die Übersicht zu bewahren und keine wichtige Anforderung zu übersehen\footnote{man nennt dies \textit{systematische Aufstellungen} bzw. \textit{Qualitätssysteme}}.\\
 
 \noindent
 Die im Kurs verwendete Systematik folgt dem Standard \textbf{IEEE 1061-1998}:
