--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -183,7 +183,7 @@
 
 	\end{center}}							% Autor der Arbeit
 	\address{\begin{center}
-				 \small{20.05.2024\\  Thorsten Suckow-Homberg, \url{https://thorsten.suckow-homberg.de}}
+				 \small{21.05.2024\\  Thorsten Suckow-Homberg, \url{https://thorsten.suckow-homberg.de}}
 	\end{center}} 							% Im Zusammenhang mit dem Datum wird hinter dem Ort ein Komma angegeben
 	\submitdate{} 				% Abgabedatum
 %\begingroup
@@ -230,6 +230,8 @@
 
 	\input{part four/teil4}
 	\input{part four/Qualität/index}
+	\input{part four/Typen von Qualitätsmaßnahmen/index}
+
 
 	\glsaddall
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
