docs: update index and metadata

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -295,7 +295,6 @@ and Rundshagen, Michael",
     title={The Pragmatic Programmer: Your journey to mastery, 20th Anniversary Edition},
     author={Thomas, D. and Hunt, A.},
     isbn={9780135956915},
-    url={https://books.google.de/books?id=LhOlDwAAQBAJ},
     year={2019},
     publisher={Pearson Education}
 }
@@ -456,8 +455,34 @@ and Rundshagen, Michael",
     isbn={9780321700698},
     lccn={94034264},
     series={Addison-Wesley Professional Computing Series},
-    url={https://books.google.de/books?id=6oHuKQe3TjQC},
     year={1994},
     publisher={Pearson Education}
 }
 
+@book{Rad01,
+    author = {Radice, Ronald A.},
+    title = {High Quality Low Cost Software Inspections},
+    year = {2001},
+    isbn = {0964591316},
+    publisher = {Paradoxicon Publishing}
+}
+
+@book{Wie02,
+    title={Peer Reviews in Software: A Practical Guide},
+    author={Wiegers, K.E.},
+    isbn={9780201734850},
+    lccn={2001045902},
+    series={Addison-Wesley information technology series},
+    year={2002},
+    publisher={Addison-Wesley}
+}
+
+@book{GG93,
+    title={Software Inspection},
+    author={Gilb, T. and Graham, D. and Finzi, S.},
+    isbn={9780201631814},
+    lccn={93001151},
+    series={Software engineering},
+    year={1993},
+    publisher={Addison-Wesley}
+}
