--- a/docs/repetitorium/part four/Typen von Qualitätsmaßnahmen/v-modell.tex
+++ b/docs/repetitorium/part four/Typen von Qualitätsmaßnahmen/v-modell.tex
@@ -1,4 +1,4 @@
-\section{V-Modell}
+\section{V-Modell}\label{sec:v-modell}
 Das \textbf{V-Modell} (s. Abbildung~\ref{fig:v-modell}) wurde als Hilfestellung für analytische Maßnahmen entwickelt, um die im vorherigen Abschnitt erwähnten Maßnahmen in den Entwicklungsprozess zu integrieren (vgl.~\cite[10]{Wed09c}).
 
 \begin{figure}
