docs: update (bib) refs and index

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -486,3 +486,24 @@ and Rundshagen, Michael",
     year={1993},
     publisher={Addison-Wesley}
 }
+
+@book{BA04,
+    author = {Beck, Kent and Andres, Cynthia},
+    title = {Extreme Programming Explained: Embrace Change (2nd Edition)},
+    year = {2004},
+    isbn = {0321278658},
+    publisher = {Addison-Wesley Professional},
+    abstract = {Whether you have a small team that is already closely aligned with your customers or a large team in a gigantic or multinational organization, you will find in these pages a wealth of ideas to challenge, inspire, and encourage you and your team members to substantially improve your software development.You will discover how to: Involve the whole team-XP style Increase technical collaboration through pair programming and continuous integration Reduce defects through developer testing Align business and technical decisions through weekly and quarterly planning Improve teamwork by setting up an informative, shared workspaceYou will also find many other concrete ideas for improvement, all based on a philosophy that emphasizes simultaneously increasing the humanity and effectiveness of software development.Every team can improve. Every team can begin improving today. Improvement is possible-beyond what we can currently imagine. Extreme Programming Explained, Second Edition, offers ideas to fuel your improvement for years to come.}
+}
+
+@article{MPT05,
+    author       = {Mülller, M. and Padberg, F. and Tichy, W. F.},
+    year         = {2005},
+    title        = {Ist XP etwas für mich? Empirische Studien zur Einschätzung von XP},
+    volume       = {64},
+    pages        = {217-228},
+    journal      = {Software Engineering},
+    publisher    = {{Elsevier}},
+    issn         = {0965-9978},
+    language     = {german}
+}
