--- a/docs/repetitorium/part four/Manuelle Verfahren/index.tex
+++ b/docs/repetitorium/part four/Manuelle Verfahren/index.tex
@@ -8,6 +8,9 @@
 \input{part four/Manuelle Verfahren/einleitung}
 \input{part four/Manuelle Verfahren/überblick über die verfahren}
 \input{part four/Manuelle Verfahren/inspektion}
+\input{part four/Manuelle Verfahren/andere verfahren}
+\input{part four/Manuelle Verfahren/vergleich und einsatz der verfahren}
+\input{part four/Manuelle Verfahren/zusammenfassung}
 \newpage
 
 
