--- a/docs/repetitorium/part four/Manuelle Verfahren/überblick über die verfahren.tex
+++ b/docs/repetitorium/part four/Manuelle Verfahren/überblick über die verfahren.tex
@@ -4,7 +4,7 @@ Passende manuelle Verfahren gibt es für verschiedene Aufgabenstellungen und Tea
 Muss ein wichtiges Dokument geprüft werden (Anforderungsdokument als Vertragsgrundlage, zentraler, sicherheitskritischer Code), untersuchen mehrere Personen systematisch den Prüfgegenstand.\\
 
 \noindent
-Verschiedene Verfahren lassen sich nach der Anzahl der Teilnehmer und dem Umfang der Untersuchung einordnen (s. Abbildung~\ref{fig:manuelleverfahren}).
+Verschiedene Verfahren lassen sich nach der Anzahl der Teilnehmer und dem Umfang der Untersuchung einordnen (s. Abbildung~\ref{fig:manuelleverfahren} sowie Abschnitt~\ref{sec:andere-verfahren}).
 
 \begin{figure}
     \centering
@@ -20,6 +20,6 @@ ergänzend führt \textit{Wedemann} als besonderes Verfahren \textbf{Pair Progra
 
 \begin{itemize}
     \item \textbf{Inspektionen} sind \textbf{hoch formalisiert} und müssen von allen Beteiligten vorbereitet werden.
-    \item Bei \textbf{Reviews} wird auf einen Teil der Formalisierung bei Vorbereitung und Durchführung verzichtet.
+    \item Bei \textbf{Reviews} wird auf einen Teil der Formalisierung bei Vorbereitung und Durchführung verzichtet.\\
     \item In einem \textbf{Walkthrough} wird ein Artefakt von seinem Autor einer Gruppe von Mitarbeitern informell vorgestellt.
 \end{itemize}
