docs: update index

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -232,7 +232,7 @@
 	\input{part four/Qualität/index}
 	\input{part four/Typen von Qualitätsmaßnahmen/index}
 	\input{part four/Manuelle Verfahren/index}
-
+	\input{part four/Werkzeuggestützte Analyse/index}
 
 	\glsaddall
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
