docs: add section Code-Metriken

--- a/docs/repetitorium/part four/Werkzeuggestützte Analyse/hilfsmittel kontrollflussgraph.tex
+++ b/docs/repetitorium/part four/Werkzeuggestützte Analyse/hilfsmittel kontrollflussgraph.tex
@@ -1,4 +1,4 @@
-\section{Hilfsmittel Kontrollflussgraph}
+\section{Hilfsmittel Kontrollflussgraph}\label{sec:hilfsmittel-kontrollflussgraph}
 Ein wichtiges Hilfsmittel ist der \textbf{Kontrollflussgraph}, der für die \textbf{Datenflussanomalieanalyse}, bestimmte \textbf{MEtriken} sowie einigen \textbf{Überdeckungskriterien} benötigt wird.
 
 \begin{tcolorbox}[title=Kontrollflussgraph]
