--- a/docs/repetitorium/part two/Objektorientierter Entwurf/prinzipien guten entwurfs.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/prinzipien guten entwurfs.tex
@@ -1,4 +1,4 @@
-\section{Prinzipien guten Entwurfs}
+\section{Prinzipien guten Entwurfs}\label{sec:prinzipien-guten-entwurfs}
 
 Der Abschnitt~\cite[69, 3.7 Prinzipien guten Entwurfs]{Wed09b} vermittelt Kenntnisse, anhand derer man
 
@@ -128,7 +128,7 @@ Der Zusammenhalt wird in der Reihenfolge schwächer (s. Abbildung~\ref{fig:zusam
     \label{fig:adt}
 \end{figure}
 
-\subsection{Lose Kopplung}
+\subsection{Lose Kopplung}\label{subsec:lose-kopplung}
 \textbf{Kopplungen} sind unvermeidlich, da bestimmte Teile zusammenarbeiten müssen.\\
 Dennoch müssen Kopplungen möglichst schwach sein, da die Teile der Software unabhängig voneinander sein sollen.
 
