--- a/docs/repetitorium/part four/Werkzeuggestützte Analyse/index.tex
+++ b/docs/repetitorium/part four/Werkzeuggestützte Analyse/index.tex
@@ -9,6 +9,7 @@
 \input{part four/Werkzeuggestützte Analyse/typische defekte}
 \input{part four/Werkzeuggestützte Analyse/hilfsmittel kontrollflussgraph}
 \input{part four/Werkzeuggestützte Analyse/datenflussanomalieanalyse und abstrakte interpretation}
+\input{part four/Werkzeuggestützte Analyse/code-metriken}
 %\input{part four/Werkzeuggestützte Analyse/zusammenfassung}
 \newpage
 
