docs: add section Zusammenfassung

--- a/docs/repetitorium/part four/Werkzeuggestützte Analyse/index.tex
+++ b/docs/repetitorium/part four/Werkzeuggestützte Analyse/index.tex
@@ -10,7 +10,7 @@
 \input{part four/Werkzeuggestützte Analyse/hilfsmittel kontrollflussgraph}
 \input{part four/Werkzeuggestützte Analyse/datenflussanomalieanalyse und abstrakte interpretation}
 \input{part four/Werkzeuggestützte Analyse/code-metriken}
-%\input{part four/Werkzeuggestützte Analyse/zusammenfassung}
+\input{part four/Werkzeuggestützte Analyse/zusammenfassung}
 \newpage
 
 
