docs: update remarks for struktur- and funktionsorientierte Testverfahren

--- a/docs/repetitorium/part four/Testende Verfahren/testende verfahren.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/testende verfahren.tex
@@ -1,4 +1,4 @@
-\usepackage{lstmisc}\section{Testende Verfahren}
+\section{Testende Verfahren}
 Bei \textbf{testenden Verfahren} wird ein \textbf{Testgegenstand} in Betrieb genommen und überprüft, ob er gemäß den Spezifikationen korrekt funktioniert.\\
 
 \noindent
@@ -27,6 +27,12 @@ Es muss zunächst geklärt werden, was mit \textbf{Volsltändigkeit von Tests} g
     Auch Tests, die sich auf nicht-funktionale Anforderungen beziehen (etwa Performance), werden meistens ohne Berücksichtigung auf die \textit{innere Struktur} durchgeführt und deswegen in die Reihe der Black-Bos-Tests eingereiht - auch, wenn sie nicht funktionsorientiert sind.
     \item \textbf{Strukturorientierter Test (White-Box-Test)}: Ein Test ist \textbf{strukturorientiert}, wenn seine Vollständigkeit anhand der Codeüberdeckung definiert wird.
 \end{itemize}
+
+\vspace{2mm}
+\begin{tcolorbox}[title=Strukturorientierte und Funktionsorientierte Tests]
+    Ein Test ist \textbf{strukturorientiert}, wenn seine Vollständigkeit anhand der Codeüberdeckung definiert wird.  \textbf{Funktionsorientierte Tests} testen die gesamte Funktionalität ohne Berücksichtigung der inneren Struktur.
+\end{tcolorbox}
+\vspace{2mm}
 
 \noindent
 Alle Verfahren sind wichtig: Ein rein \textbf{strukturorientierter Test} wäre nicht ausreichend, da fehlende Funktionalität nicht bemerkt werden würde.\\
