docs: add section Funktionsorientierte Testverfahren

--- a/docs/repetitorium/part four/Testende Verfahren/index.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/index.tex
@@ -4,6 +4,7 @@
 \input{part four/Testende Verfahren/lernziele}
 \newpage
 \input{part four/Testende Verfahren/testende verfahren}
+\input{part four/Testende Verfahren/funktionsorientierte testverfahren}
 
 %\input{part four/Testende Verfahren/zusammenfassung}
 \newpage
